--- a/index.html
+++ b/index.html
@@ -12,17 +12,53 @@
     <h2><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">A link to the CS290 Webpage</a></h2>
 </center>
 <hr/>
-<h3>Biographical Information</h3>
+<div id="bio">
+    <h3>Biographical Information</h3>
     <ul>
         <li>Hello, my name is Jarod Cahoon!</li>
         <li>I am from Grantsboro, North Carolina.</li>
         <li>I am a Sophomore, and will graduate in 2020</li>
     </ul>
-<h3>Websites to Choose</h3>
-        <li><img src="https://www.pexels.com/photo/grey-and-white-short-fur-cat-104827/"> I like cats. Here is an image of a cat I found online!</li>
-        <li><a href="http://www.coolmath-games.com/">Here</a> is website that I thought would initially look ugly (it did back in the day), but now looks pretty good. Everything is well laid out and easy to find!</li>
-        <li><a href="http://www.3riversstadium.com/index2.html">On the other hand...</a>we have this website, which looks like it was built in the stone age. Everything is excruciating to find, and the sizing of the website doesn't fit the screen</li>
-        <li><a href="https://www.coursera.org/learn/data-communication-network-services/lecture/jP4n1/web-server-and-client-interactions">Here</a> is a website for learning about client-server interactions</li>
-    </ul>
+</div>
+
+<h3>Picture of Choice</h3>
+<p><img src="https://www.pexels.com/photo/grey-and-white-short-fur-cat-104827/"> I like cats. Here is an image
+    of a cat I found online!
+</p>
+
+<h3>Good-Lookin' Wesbites</h3>
+<ol>
+    <li><a href="http://www.coolmath-games.com/">Here</a> is website that I thought would initially look ugly
+        (it did back in the day), but now looks pretty good. Everything is well laid out and easy to find!
+    </li>
+    <li><a href="https://www.squarespace.com/">Another</a> fairly good looking website, which is to be expected from a
+        website of a company which creates websites. It is aesthetically clean, nice to look at, and makes me want to buy
+        their product, so I guess it kind of works!
+    </li>
+</ol>
+<h3>Ugly Websites</h3>
+<ol>
+    <li><a href="http://www.3riversstadium.com/index2.html">On the other hand...</a>we have this website, which
+        looks like it was built in the stone age. Everything is excruciating to find, and the sizing of the website
+        doesn't fit the screen well. I suppose that it wasn't made to handle the new internet frameworks and whatnot,
+        so I guess that it makes sense that it is ugly.
+    </li>
+    <li>A long time ago, in a galaxy far, far away-- I was in high school, and its <a href="http://pchs.pamlicoschools.org/">website</a> was not the best.
+    Though I am honestly surprised to see that the website has gotten better, I still have to say that there are a lot of links on the website that lead to dead ends,
+    or don't provide enough information.</li>
+</ol>
+</ol>
+<h3>Resources for this class</h3>
+<ol>
+    <li>
+        <a href="https://www.coursera.org/learn/data-communication-network-services/lecture/jP4n1/web-server-and-client-interactions">Here</a>
+        is a website for learning about client-server interactions. Coursera is one of my favorites.
+    </li>
+    <li>
+        <a href="https://www.tutorialspoint.com/internet_technologies/internet_security_overview.htm">Here</a> is a resource for learning the basics
+        of web security.
+    </li>
+</ol>
+
 </body>
 </html>
