Greatly added to the aquarium section of the website

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -15,12 +15,106 @@
 </h1>
 <ul>
     <li><h2><a>Tank Supplies</a></h2></li>
+    <li>
+        <ul>
+            <li>
+                <strong>Fish Tank</strong> - When buying a fishtank, there are several things that you should consider
+                about your purchase.
+                One of the first, and most fundamental things that you should consider about your tank is what type of
+                material you would
+                like the tank to be made out of. Tanks are typically made out of either acryllic or glass, both of which
+                are very similar, but slightly
+                different. Acryllic is typically <a href="https://www.youtube.com/watch?v=CeSkxgz7-Z0">tougher</a> than
+                glass, though it is often much softer,
+                and will scratch more easily. Glass, on the other hand, is harder than glass, but is less tough, and
+                runs a higher risk of being shattered during
+                transportation. The next thing you should consider when buying a tank is the size of the tank. Tanks can
+                range from 1 gallon, to 200 plus, and for good reason.
+                Certain animals will often require more room than other animals in tanks, which should be considered.
+                Colleges/apartments sometimes have regulations on the maximum
+                size of fishtanks, so check those requirements before you buy a tank. Additionally, keep in mind that
+                water is <strong>extremely</strong> heavy, and tanks larger than
+                15 gallons or so require specialized stands that can withstand the weight of the tank. A 30 gallon tank
+                contains ~250 pounds of water, which can make some full tanks
+                approach 300 pounds fully filled. <a href="https://www.petsmart.com/">Petsmart</a> often has "dollar per
+                gallon" deals,
+                in which they sale tanks up to around 75 gallons for around a dollar a gallon. Second-hand tanks are
+                often a good option,
+                with both <a href="https://www.ebay.com">Ebay</a> and <a
+                    href="https://www.craigslist.org">craigslist</a> commonly having listings
+                for tanks.
+            </li>
+            <li>
+                <strong>Filter</strong> - Filters are needed to keep the water of a fishtank clean, and are imperative
+                for the health of the animals in the tank.
+                There are several different styles of fishtank filters, from <a
+                    href="https://www.amazon.com/BACTO-SURGE-HIGH-DENSITY-FOAM-FILTER/dp/B00GOFPX9I/ref=sr_1_4?s=pet-supplies&ie=UTF8&qid=1515969140&sr=1-4&keywords=sponge+filter">sponge</a>
+                filters to <a
+                    href="https://www.amazon.com/Tetra-25774-Whisper-Filter-40-Gallon/dp/B0002DHY6I/ref=sr_1_2?s=pet-supplies&ie=UTF8&qid=1515969234&sr=1-2&keywords=tetra+whisper+filter">traditional</a>
+                filters,
+                to even <a
+                    href="https://www.amazon.com/Aquarium-Filter-Bio-balls-Filtration-1-inch/dp/B00F11B6ME/ref=sr_1_3?s=pet-supplies&ie=UTF8&qid=1515969263&sr=1-3&keywords=bio+balls">bio-balls</a>.
+                Each of these function
+                in a slightly different way, but ultimately serve the same purpose. Depending on what type of tank/size
+                of tank that you have, and what resides in it, one filter may be preferable to another.
+            </li>
+            <li>
+                <strong>Vacuum Cleaner</strong> - Though the filter on the fishtank make keep the water itself clean
+                enough for fish to swim in, they typically are not powerful enough
+                to remove all plant detritus/excess food from falling to the bottom of the tank. If left uncleaned at
+                the bottom of the tank, this food/detritus can decompose and cause an ammonia spike in your tank,
+                which could potentially kill your fish if not quickly handled. Most of the vacuums for aquariums are
+                simple <a
+                    href="https://www.amazon.com/Genuine-TERAPUMP-Aquarium-Cleaner-Controller/dp/B011DDJZ9Y/ref=sr_1_4?s=pet-supplies&ie=UTF8&qid=1515969723&sr=1-4&keywords=aquarium+vacuum">hand
+                pumps</a> with a grate to prevent substrate from being sucked out, though nicer models,
+                with <a
+                    href="https://www.amazon.com/Genuine-TERAPUMP-Aquarium-Cleaner-Controller/dp/B011DDJZ9Y/ref=sr_1_4?s=pet-supplies&ie=UTF8&qid=1515969723&sr=1-4&keywords=aquarium+vacuum">actual
+                motors</a> can also be bought. Since fish tanks can already be pricey,
+                I think that a hand pump is adequate for the most part.
+            </li>
+            <li>
+                <strong>Thermometer</strong> -
+            </li>
+            <li>
+                <strong>Light</strong> -
+            </li>
+            <li>
+                <strong>Heater</strong> -
+            </li>
+            <li>
+                <strong>Oxygen Exchange</strong> -
+            </li>
+        </ul>
+    </li>
     <li><h2><a href="http://www.fishkeeping.co.uk/articles_51/fishless-cycling-article.htm">Cycling a Tank</a></h2></li>
-    <li>The act of cycling a fish-tank prior to adding fish is essential to </li>
+    <li>
+        <ul>
+            <li>
+                Cycling a fishtank is the act of creating a healthy bacterial environment within the fishtank,
+                such that ammonia waste produced by the organisms within the tank is properly handled. This cycle of
+                breaking down
+                ammonia is known as the <i>Nitrogen Cycle</i>.
+            </li>
+            <li>
+                This cycle is <strong>essential</strong> to ensure that all of the critters living in your tank are
+                as healthy as possible. Low ( > 0) ppm of ammonia and nitrites in the water can make your animals
+                lethargic or sick,
+                and high ppm of ammonia and aitrites in the water can kill your animals outright, depending on the
+                hardiness of the
+                species.
+            </li>
+            <li>
+                Only <strong>after</strong> a fishtank has been cycled should animals be placed in your tank. Though you
+                have
+                already completed a cycle of the tank at this point, you should continue to monitor the water quality of
+                the tank
+                multiple times a week to ensure that no ammonia/nitrite/nitrate spikes occur.
+            </li>
+        </ul>
+    </li>
     <li><h2><a>Cleaning a Tank</a></h2></li>
     <li><h2><a>Freshwater vs Saltwater Tanks</a></h2></li>
     <li><h2><a>Tankmate Compatability</a></h2></li>
-    <li><h2><a></a></h2></li>
 </ul>
 <h1>About me</h1>
 <p>Hello, my name is Jarod Cahoon, and I attend Duke University. I grew up in eastern North Carolina, and consequently
