Finished up the stuff on the main page

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <center>
-    <h1>Interest: Aquariums</h1>
+    <h1>My Hobby : Aquariums</h1>
     <h2>Jarod Cahoon</h2>
 </center>
 <hr/>
