--- a/index.html
+++ b/index.html
@@ -13,16 +13,63 @@
 </center>
 <hr/>
 <div id="bio">
-    <h3>Biographical Information</h3>
+    <h3>Autobiographical Information</h3>
     <ul>
         <li>Hello, my name is Jarod Cahoon!</li>
         <li>I am from Grantsboro, North Carolina.</li>
         <li>I am a Sophomore, and will graduate in 2020</li>
+        <li><h3>Questions:</h3></li>
+        <li>
+            <ul>
+                <li><strong>When did you first start using a computer?</strong></li>
+                <li class="answer">I first starting using a computer when I was around 6 or 7, when my dad would let me
+                    sit on his lap and drag the cards across the screen when he won in Solitaire.
+                </li>
+                <li><strong>What kinds of computers have you used?</strong></li>
+                <li class="answer">I have used everything from an only MacIntosh we had at school to the computer I just
+                    rebuilt a couple of weeks ago.
+                </li>
+                <li><strong>How do you use computers on a daily basis?</strong></li>
+                <li class="answer">I use computers to do everything from checking my email, to playing video games, to
+                    browsing to net on my phone.
+                </li>
+                <li><strong>What do you think a computer scientist does on a daily basis?</strong></li>
+                <li class="answer">I think this is kind of a loaded question because I feel that what qualifies as a
+                    "computer scientist" is very broad and contentious.
+                    I think that people who would consider themselves "computer scientists" do everything from building
+                    websites to studying graphs, to developing cryptographic algorithsm.
+                    I feel that the field is very broad.
+                </li>
+                <li><strong>What event(s) made you interested in studying computer science and this course in
+                    particular?</strong></li>
+                <li class="answer">At a young age I kind of wanted to know how a computer worked, and realized that I
+                    couldn't rely on my somewhat Luddite parents to provide answers for me.
+                    I ended up deciding to take this course simply because I felt like even after taking 3 or 4 other
+                    computer science courses, I still knew absolutely nothing about how the internet
+                    really works, or people interact with the internet.
+                </li>
+                <li><strong>What kinds of skills are required to code different parts of a web site?</strong></li>
+                <li class="answer">I honestly have no clue, but from what I have done in this assignment thus far, it
+                    seems like a lot of a creativity and understanding of what you want to do with the
+                    layout of the website before you even start using it.
+                </li>
+                <li><strong>How do you see yourself using computers in the future?</strong></li>
+                <li class="answer">Though this might be kind of a sad answer, I feel that the reality of the future is
+                    that our existence is inextricable from the use of computers. It feels like the
+                    technological revolution has barely just began, but we still can barely go to the kitchen to get ice
+                    cubes for our soda without using a computer in one way or another. In terms of what I would
+                    <i>like</i> to do with computers -- I would have to say I would like to use computers to help make
+                    the lives of others easier.
+                </li>
+            </ul>
+        </li>
     </ul>
 </div>
 
 <h3>Picture of Choice</h3>
-<p><img src="https://www.pexels.com/photo/grey-and-white-short-fur-cat-104827/"> I like cats. Here is an image
+<img src="https://static.pexels.com/photos/126407/pexels-photo-126407.jpeg" height="200" width="300">
+<p>
+    I like cats. Here is an image
     of a cat I found online!
 </p>
 
@@ -32,7 +79,8 @@
         (it did back in the day), but now looks pretty good. Everything is well laid out and easy to find!
     </li>
     <li><a href="https://www.squarespace.com/">Another</a> fairly good looking website, which is to be expected from a
-        website of a company which creates websites. It is aesthetically clean, nice to look at, and makes me want to buy
+        website of a company which creates websites. It is aesthetically clean, nice to look at, and makes me want to
+        buy
         their product, so I guess it kind of works!
     </li>
 </ol>
@@ -43,9 +91,12 @@
         doesn't fit the screen well. I suppose that it wasn't made to handle the new internet frameworks and whatnot,
         so I guess that it makes sense that it is ugly.
     </li>
-    <li>A long time ago, in a galaxy far, far away-- I was in high school, and its <a href="http://pchs.pamlicoschools.org/">website</a> was not the best.
-    Though I am honestly surprised to see that the website has gotten better, I still have to say that there are a lot of links on the website that lead to dead ends,
-    or don't provide enough information.</li>
+    <li>A long time ago, in a galaxy far, far away-- I was in high school, and its <a
+            href="http://pchs.pamlicoschools.org/">website</a> was not the best.
+        Though I am honestly surprised to see that the website has gotten better, I still have to say that there are a
+        lot of links on the website that lead to dead ends,
+        or don't provide enough information.
+    </li>
 </ol>
 </ol>
 <h3>Resources for this class</h3>
@@ -55,7 +106,8 @@
         is a website for learning about client-server interactions. Coursera is one of my favorites.
     </li>
     <li>
-        <a href="https://www.tutorialspoint.com/internet_technologies/internet_security_overview.htm">Here</a> is a resource for learning the basics
+        <a href="https://www.tutorialspoint.com/internet_technologies/internet_security_overview.htm">Here</a> is a
+        resource for learning the basics
         of web security.
     </li>
 </ol>
