Passes HTML validation

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -5,10 +5,8 @@
     <title>Stadium Arcadium</title>
 </head>
 <body>
-<center>
-    <h1>My Hobby : Aquariums</h1>
-    <h2>Jarod Cahoon</h2>
-</center>
+    <h1 class="top">My Hobby : Aquariums</h1>
+    <h2 class="top">Jarod Cahoon</h2>
 <hr/>
 <h1>
     Fundamentals of Owning an Aquarium
