--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-<center>
-    <h1>The Wizarding Wordl of Web Development</h1>
-    <h2>Author: Jarod Cahoon</h2>
-    <h2><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">A link to the CS290 Webpage</a></h2>
-</center>
+<header>
+    <h1 class="top">The Wizarding Wordl of Web Development</h1>
+    <h2 class="top">Author: Jarod Cahoon</h2>
+    <h2 class="top"><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">A link to the CS290 Webpage</a></h2>
+</header>
 <hr/>
 <div id="bio">
     <h3>Autobiographical Information</h3>
@@ -67,7 +67,7 @@
 </div>
 
 <h3>Picture of Choice</h3>
-<img src="https://static.pexels.com/photos/126407/pexels-photo-126407.jpeg" height="200" width="300">
+<img src="https://static.pexels.com/photos/126407/pexels-photo-126407.jpeg" height="200" width="300" alt="Sorry this isnt available">
 <p>
     I like cats. Here is an image
     of a cat I found online!
@@ -98,7 +98,6 @@
         or don't provide enough information.
     </li>
 </ol>
-</ol>
 <h3>Resources for this class</h3>
 <ol>
     <li>
@@ -111,6 +110,13 @@
         of web security.
     </li>
 </ol>
-
+<hr/>
+<footer>
+    <ul>
+        <li class="footer">Jarod Cahoon</li>
+        <li class="footer">jarod.cahoon@duke.edu</li>
+        <li class="footer"><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">course website</a></li>
+    </ul>
+</footer>
 </body>
 </html>
