Finished the Necessary Supplies part of the Page

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -5,8 +5,8 @@
     <title>Stadium Arcadium</title>
 </head>
 <body>
-    <h1 class="top">My Hobby : Aquariums</h1>
-    <h2 class="top">Jarod Cahoon</h2>
+<h1 class="top">My Hobby : Aquariums</h1>
+<h2 class="top">Jarod Cahoon</h2>
 <hr/>
 <h1>
     Fundamentals of Owning an Aquarium
@@ -46,12 +46,12 @@
                 <strong>Filter</strong> - Filters are needed to keep the water of a fishtank clean, and are imperative
                 for the health of the animals in the tank.
                 There are several different styles of fishtank filters, from <a
-                    href="https://www.amazon.com/BACTO-SURGE-HIGH-DENSITY-FOAM-FILTER/dp/B00GOFPX9I/ref=sr_1_4?s=pet-supplies&ie=UTF8&qid=1515969140&sr=1-4&keywords=sponge+filter">sponge</a>
+                    href="https://tinyurl.com/y97coq8h">sponge</a>
                 filters to <a
-                    href="https://www.amazon.com/Tetra-25774-Whisper-Filter-40-Gallon/dp/B0002DHY6I/ref=sr_1_2?s=pet-supplies&ie=UTF8&qid=1515969234&sr=1-2&keywords=tetra+whisper+filter">traditional</a>
+                    href="https://tinyurl.com/y83fb9xp">traditional</a>
                 filters,
                 to even <a
-                    href="https://www.amazon.com/Aquarium-Filter-Bio-balls-Filtration-1-inch/dp/B00F11B6ME/ref=sr_1_3?s=pet-supplies&ie=UTF8&qid=1515969263&sr=1-3&keywords=bio+balls">bio-balls</a>.
+                    href="https://tinyurl.com/y7nrx5qf">bio-balls</a>.
                 Each of these function
                 in a slightly different way, but ultimately serve the same purpose. Depending on what type of tank/size
                 of tank that you have, and what resides in it, one filter may be preferable to another.
@@ -63,24 +63,62 @@
                 the bottom of the tank, this food/detritus can decompose and cause an ammonia spike in your tank,
                 which could potentially kill your fish if not quickly handled. Most of the vacuums for aquariums are
                 simple <a
-                    href="https://www.amazon.com/Genuine-TERAPUMP-Aquarium-Cleaner-Controller/dp/B011DDJZ9Y/ref=sr_1_4?s=pet-supplies&ie=UTF8&qid=1515969723&sr=1-4&keywords=aquarium+vacuum">hand
+                    href="https://tinyurl.com/yaflrpen">hand
                 pumps</a> with a grate to prevent substrate from being sucked out, though nicer models,
                 with <a
-                    href="https://www.amazon.com/Genuine-TERAPUMP-Aquarium-Cleaner-Controller/dp/B011DDJZ9Y/ref=sr_1_4?s=pet-supplies&ie=UTF8&qid=1515969723&sr=1-4&keywords=aquarium+vacuum">actual
+                    href="https://tinyurl.com/yd3rwzxa">actual
                 motors</a> can also be bought. Since fish tanks can already be pricey,
                 I think that a hand pump is adequate for the most part.
             </li>
             <li>
-                <strong>Thermometer</strong> -
+                <strong>Thermometer/Heater</strong> - Most fish/invertibrates that you will be storing in a fish tank
+                will be extremely
+                temperature sensitive, which makes it necessary to not only have a way to measure the temperature, but
+                also a way
+                to ensure that the water is warm. These items can be found cheaply on Amazon or in your local fish
+                store, but I would
+                specifically recommend a <a href="https://tinyurl.com/yc5chmt6">heater</a> which automatically maintains
+                a certain temperature.
             </li>
             <li>
-                <strong>Light</strong> -
+                <strong>Light</strong> - Just like humans, most fish can have a circadian rhythm, and be photosensitive.
+                Typically, unless your tank is stored directly adjacent to a window, it can be difficult for an unlit
+                tank
+                to get adequate light. For this reason, it is recommended for most tanks that you buy a light to either
+                attach
+                to the hood, or place directly above the open tank. Most fish tank <a
+                    href="https://tinyurl.com/y93nex3j">"beginner kits"</a>
+                come with a light. While it is important that you do provide a light for your tank, it is perhaps more
+                important
+                that the light does not stay on longer than ~6 hours a day. Prolonged light exposure in a tank can cause
+                excess
+                algae to bloom, which could damage the health of the tank. For this, I would recommend a <a
+                    href="https://tinyurl.com/y8oxp4zo">programmable switch</a>
+                , which can be used to set the hours in which your light should turn or off. If you are interested in
+                having a
+                planted tank, then the lighting of the tank becomes even more important, and there are <a
+                    href="https://tinyurl.com/y899zq2v">customizable lights</a>
+                which allow you to specify the wavelength of light you want, to maximize the growth of your plants.
             </li>
             <li>
-                <strong>Heater</strong> -
-            </li>
-            <li>
-                <strong>Oxygen Exchange</strong> -
+                <strong>Surface Agitation</strong> - The last major component of any good tank setup is something which
+                "agitates"
+                the water's surface, or causes it to move. In nature, most inhabitable bodies of water are constantly in
+                motion, be it from
+                whatever force. This motion causes the surface of the water to continuously coalesce and overlap with
+                the air around it,
+                doing two distinct things. First, this motion causes oxygen from the air to be introduced, and
+                eventually dissolved, into
+                the water. Second, this causes any biological buildup on the surface of the water to be continually
+                mixed back into the water,
+                and not allowed to settle on the top. Because a fish tank (hopefully) will not be subject to any storms
+                or violent
+                shaking, this means that it needs to be introduced into the system deliberately. The main way of doing
+                this is through
+                the use of an <a href="https://tinyurl.com/yabt5lde">air stone</a>, though if you purchased a sponge
+                filter they commonly do this by default. Regardless of which
+                option you pick, however, an <a href="https://tinyurl.com/yc3sz73x">air pump</a> and <a
+                    href="https://tinyurl.com/ybh6po3h">tubing</a> are required.
             </li>
         </ul>
     </li>
@@ -112,7 +150,8 @@
     </li>
     <li><h2><a>Cleaning a Tank</a></h2></li>
     <li><h2><a>Freshwater vs Saltwater Tanks</a></h2></li>
-    <li><h2><a>Tankmate Compatability</a></h2></li>
+    <li><h2><a href="http://www.liveaquaria.com/general/general.cfm?general_pagesid=295">Tankmate Compatability</a></h2>
+    </li>
 </ul>
 <h1>About me</h1>
 <p>Hello, my name is Jarod Cahoon, and I attend Duke University. I grew up in eastern North Carolina, and consequently
