--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
     <ul>
         <li class="footer">Jarod Cahoon</li>
         <li class="footer">jarod.cahoon@duke.edu</li>
-        <li class="footer"><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">course website</a></li>
+        <li class="footer"><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">Course Website</a></li>
+        <li class="footer"><a href="Aquariums.html">My Hobby Website</a></li>
     </ul>
 </footer>
 </body>
