Finished the 'tank cleaning' section of the basics

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -148,7 +148,35 @@
             </li>
         </ul>
     </li>
-    <li><h2><a>Cleaning a Tank</a></h2></li>
+    <li><h2><a>Cleaning a Tank</a></h2></li
+    <li>
+        <ul>
+            <li>
+                Cleaning a tank is essential to ensuring that the water your pets live in does not become contaminated by their own waste,
+                or excess food.
+            </li>
+            <li>
+                Typically, a tank should be cleaned about once a week, or even more if you have an especially productive tank
+                which produces a lot of waste.
+            </li>
+            <li>
+                Cleaning involves vacuuming as much of the detritus and extra food out of substrate of the tank as possible,
+                and then replacing this water with water that has been treated to remove chlorine or any other additives which
+                may make your animals sick.
+            </li>
+            <li>
+                The glass of the tank should also be cleaned regularly, not only for your viewing pleasure, but also
+                to prevent algae from taking over your tank, and potentially poisoning all of your animals. Cleaning the glass
+                can consist of simply wiping out the tank with the a clean washcloth or paper towel, or purchasing animals
+                which can clean the algae off of the glass.
+            </li>
+            <li>
+                You should also regularly perform water changes in the tank. This can often be done at the same time as cleaning
+                the gravel, as most gravel vacuums also suck up the water. Performing regular water changes is necessary to removing
+                any built up chemicals in the water which are too heavy or difficult for the bacterial medium in your filter to remove.
+            </li>
+        </ul>
+    </li>
     <li><h2><a>Freshwater vs Saltwater Tanks</a></h2></li>
     <li><h2><a href="http://www.liveaquaria.com/general/general.cfm?general_pagesid=295">Tankmate Compatability</a></h2>
     </li>
