Finished the 'Fundamentals' section of my Aquarium page

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -152,33 +152,83 @@
     <li>
         <ul>
             <li>
-                Cleaning a tank is essential to ensuring that the water your pets live in does not become contaminated by their own waste,
+                Cleaning a tank is essential to ensuring that the water your pets live in does not become contaminated
+                by their own waste,
                 or excess food.
             </li>
             <li>
-                Typically, a tank should be cleaned about once a week, or even more if you have an especially productive tank
+                Typically, a tank should be cleaned about once a week, or even more if you have an especially productive
+                tank
                 which produces a lot of waste.
             </li>
             <li>
-                Cleaning involves vacuuming as much of the detritus and extra food out of substrate of the tank as possible,
-                and then replacing this water with water that has been treated to remove chlorine or any other additives which
+                Cleaning involves vacuuming as much of the detritus and extra food out of substrate of the tank as
+                possible,
+                and then replacing this water with water that has been treated to remove chlorine or any other additives
+                which
                 may make your animals sick.
             </li>
             <li>
                 The glass of the tank should also be cleaned regularly, not only for your viewing pleasure, but also
-                to prevent algae from taking over your tank, and potentially poisoning all of your animals. Cleaning the glass
-                can consist of simply wiping out the tank with the a clean washcloth or paper towel, or purchasing animals
+                to prevent algae from taking over your tank, and potentially poisoning all of your animals. Cleaning the
+                glass
+                can consist of simply wiping out the tank with the a clean washcloth or paper towel, or purchasing
+                animals
                 which can clean the algae off of the glass.
             </li>
             <li>
-                You should also regularly perform water changes in the tank. This can often be done at the same time as cleaning
-                the gravel, as most gravel vacuums also suck up the water. Performing regular water changes is necessary to removing
-                any built up chemicals in the water which are too heavy or difficult for the bacterial medium in your filter to remove.
+                You should also regularly perform water changes in the tank. This can often be done at the same time as
+                cleaning
+                the gravel, as most gravel vacuums also suck up the water. Performing regular water changes is necessary
+                to removing
+                any built up chemicals in the water which are too heavy or difficult for the bacterial medium in your
+                filter to remove.
             </li>
         </ul>
     </li>
     <li><h2><a>Freshwater vs Saltwater Tanks</a></h2></li>
+    <li>
+        <ul>
+            <li>
+                This is an extremely complicated topic that I have very limited knowledge about, so I will keep it
+                simple
+            </li>
+            <li>
+                Saltwater tanks, and consequently saltwater animals, are much harder to keep healthy and maintain than
+                freshwater tanks and freshwater fish.
+            </li>
+            <li>
+                Consequently, I would <strong>strongly</strong> recommend that you do not try a saltwater tank if you
+                are a beginner aquarist, or if you have not sat down and made a plan for all of the items, or how you
+                will afford them.
+            </li>
+        </ul>
+    </li>
     <li><h2><a href="http://www.liveaquaria.com/general/general.cfm?general_pagesid=295">Tankmate Compatability</a></h2>
+    </li>
+    <li>
+        <ul>
+            <li>
+                Just like humans, some fish/invertebrates do not get along with one another. In a fishtank where
+                there are many potential predator/prey relationships at stake, this means that you could potentially
+                lose a lot of money on animals that you bought.
+            </li>
+            <li>
+                Before purchasing your primary tank inhabitant, consider whether or not adding this inhabitant to the
+                tank would prevent you from successfully fostering another inhabitant in the future. For instance, male
+                Betta fish are very aggressive, and will attack a <strong>huge</strong> swath of other animals, so
+                purchasing
+                a male Betta instantly eliminates a lot of other potential tankmates as options.
+            </li>
+            <li>
+                Before purchasing any additional tank inhabitants, ensure that what you currently have in the tank will
+                not
+                attack what you are purchasing, or vice versa. In addition, consider that it can take up to several
+                weeks
+                for a new tank inhabitant to "settle in", meaning that it is possible for aggression to occur between
+                species which otherwise would not be aggressive towards one another.
+            </li>
+        </ul>
     </li>
 </ul>
 <h1>About me</h1>
