Started adding some of my favorite inhabitants

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -231,6 +231,28 @@
         </ul>
     </li>
 </ul>
+<h1>Personal Favorite Tank Inhabitants</h1>
+<ul>
+    <li class="taHeader"><h3>African Dwarf Frog</h3></li>
+    <img src="" alt=" Picture Unavailable">
+    <li class="taHeader"><h3>Harlequin Shrimp</h3></li>
+    <img src="" alt=" Picture Unavailable">
+    <li class="taHeader"><h3>Pea Puffer</h3></li>
+    <img src="" alt=" Picture Unavailable">
+    <li class="taHeader"><h3>Bamboo Shrimp</h3></li>
+    <img src="" alt=" Picture Unavailable">
+</ul>
+<h1>Personal Favorite Tank Plants</h1>
+<ul>
+    <li class="tpHeader"><h3></h3></li>
+    <img src="" alt=" Picture Unavailable">
+    <li class="tpHeader"><h3></h3></li>
+    <img src="" alt=" Picture Unavailable">
+    <li class="tpHeader"><h3></h3></li>
+    <img src="" alt=" Picture Unavailable">
+    <li class="tpHeader"><h3></h3></li>
+    <img src="" alt=" Picture Unavailable">
+</ul>
 <h1>About me</h1>
 <p>Hello, my name is Jarod Cahoon, and I attend Duke University. I grew up in eastern North Carolina, and consequently
     frequented local beaches throughout my childhood, which fostered an admiration and respect for both marine
