--- a/Aquariums.html
+++ b/Aquariums.html
@@ -234,25 +234,51 @@
 <h1>Personal Favorite Tank Inhabitants</h1>
 <ul>
     <li class="taHeader"><h3>African Dwarf Frog - genus <i>Hymenochirus</i></h3></li>
-    <li><ul>
-        <li class="img"><a href="https://upload.wikimedia.org/wikipedia/commons/2/23/African_dwarf_frog.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/2/23/African_dwarf_frog.jpg" height="200" width="300" alt=" Picture Unavailable"></a></li>
-        <li><p>These freshwater frogs are both super interesting to look at and super interesting to interact with.
-        Because they are fully aquatic, only needing to come up and get air from time to time, they work well in freshwater
-        tanks. They are also a nice breath of fresh air from the typical tank inhabitants, which are usually fish or
-        invertebrates.</p></li>
-    </ul></li>
+    <li>
+        <ul>
+            <li class="img"><a href="https://upload.wikimedia.org/wikipedia/commons/2/23/African_dwarf_frog.jpg"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/2/23/African_dwarf_frog.jpg" height="200"
+                    width="300" alt=" Picture Unavailable"></a></li>
+            <li><p>These freshwater frogs are both super interesting to look at and super interesting to interact with.
+                Because they are fully aquatic, only needing to come up and get air from time to time, they work well in
+                freshwater
+                tanks. They are also a nice breath of fresh air from the typical tank inhabitants, which are usually
+                fish or
+                invertebrates.</p></li>
+        </ul>
+    </li>
     <li class="taHeader"><h3>Harlequin Shrimp - <i>Hymenocera picta</i></h3></li>
-    <li><ul>
-        <li class="img"><a href="https://c1.staticflickr.com/1/98/233840131_000ea85ce0_b.jpg"><img src="https://c1.staticflickr.com/1/98/233840131_000ea85ce0_b.jpg" height="200" width="300" alt=" Picture Unavailable"></a></li>
-    </ul></li>
+    <li>
+        <ul>
+            <li class="img"><a href="https://c1.staticflickr.com/1/98/233840131_000ea85ce0_b.jpg"><img
+                    src="https://c1.staticflickr.com/1/98/233840131_000ea85ce0_b.jpg" height="200" width="300"
+                    alt=" Picture Unavailable"></a></li>
+            <li><p>The harlequin shrimp is an awesome looking saltwater shrimp whose diet consists of strictly one animal :
+            starfish. This makes the harlequin shrimp incredibly hard to house and maintain, since you also have to actively
+                grow a food supply in another tank (starfish are insanely expensive to buy).</p></li>
+        </ul>
+    </li>
     <li class="taHeader"><h3>Pea Puffer - <i>Carinotetraodon travancoricus</i></h3></li>
-    <li><ul>
-        <li class="img"><a href="https://upload.wikimedia.org/wikipedia/commons/d/d4/Dwarf-Pufferfish.jpeg"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Dwarf-Pufferfish.jpeg" height="200" width="300" alt=" Picture Unavailable"></a></li>
-    </ul></li>
+    <li>
+        <ul>
+            <li class="img"><a href="https://upload.wikimedia.org/wikipedia/commons/d/d4/Dwarf-Pufferfish.jpeg"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Dwarf-Pufferfish.jpeg" height="200"
+                    width="300" alt=" Picture Unavailable"></a></li>
+            <li><p>Having caught actual puffer fish before off of the coast of North Carolina, I think its really cool
+            that there is a mini version of what is essentially the same animal. I think the dorky little things are so
+            adorable.</p></li>
+        </ul>
+    </li>
     <li class="taHeader"><h3>Bamboo Shrimp - <i>Atyopsis</i></h3></li>
-    <li><ul>
-        <li class="img"><a href="https://upload.wikimedia.org/wikipedia/commons/7/7e/Bambooshrimpdriftwd.JPG"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Bambooshrimpdriftwd.JPG" height="200" width="300" alt=" Picture Unavailable"></a></li>
-    </ul></li>
+    <li>
+        <ul>
+            <li class="img"><a href="https://upload.wikimedia.org/wikipedia/commons/7/7e/Bambooshrimpdriftwd.JPG"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Bambooshrimpdriftwd.JPG" height="200"
+                    width="300" alt=" Picture Unavailable"></a></li>
+            <li><p>These dudes are cool, largely because they actually eat by waving their fans through the water and catching
+            debris and small bacteria. They are also very amicable and fit in well with most community shrimp tanks.</p></li>
+        </ul>
+    </li>
 </ul>
 <h1>Personal Favorite Tank Plants</h1>
 <ul>
